docs: Add example.env with all API keys and environment variables
- Added comprehensive example.env with all required/optional API keys
- Documented AI providers (OpenAI, Anthropic, Groq, HuggingFace)
- Documented Ollama setup (local, no keys needed)
- Documented Trading APIs (Zerodha, TradingView, Finnhub)
- Documented Analytics (Sentry, PostHog)
- Added feature flags and development settings
- Added security notes and setup instructions
- Updated .gitignore to keep example.env

--- a/example.env
+++ b/example.env
@@ -1,350 +1,122 @@
-# ============================================
-# RegenBrowser - Environment Variables Example
-# ============================================
-# Copy this file to `.env` and fill in your actual API keys and configuration values.
-# Never commit `.env` to version control!
+# RegenBrowser Environment Variables
+# Copy this file to .env and fill in your API keys
 
 # ============================================
-# Build / Runtime Configuration
-# ============================================
-NODE_ENV=development
-VITE_DEV_SERVER_URL=http://localhost:5173
-VITE_APP_API_URL=http://localhost:4000
-VITE_API_BASE_URL=http://localhost:4000
-
-# ============================================
-# Backend Server Configuration
-# ============================================
-API_BASE_URL=http://localhost:4000
-PORT=4000
-HOST=0.0.0.0
-
-# Electron dev safety toggles (keep unless you know you can disable)
-OB_DISABLE_HEAVY_SERVICES=1
-ELECTRON_DISABLE_GPU_SANDBOX=1
-LIBANGLE_DISABLE_D3D11=1
-ANGLE_DEFAULT_PLATFORM=swiftshader
-ELECTRON_FORCE_USE_SWIFTSHADER=1
-ELECTRON_ENABLE_STACK_DUMPING=true
-ELECTRON_DEFAULT_ERROR_MODE=true
-
-# --- Trading APIs ---
-BINANCE_API_KEY=
-BINANCE_API_SECRET=
-FINNHUB_API_KEY=
-FINNHUB_TOKEN=
-# Note: Server uses FINNHUB_TOKEN, FINNHUB_API_KEY is fallback
-
-# --- Research / Search APIs ---
-BRAVE_API_KEY=
-BING_API_KEY=your_bing_api_key_here
-TAVILY_API_KEY=
-FIRECRAWL_API_KEY=
-FIRECRAWL_BASE_URL=https://api.firecrawl.dev
-FIRECRAWL_WEBHOOK_SECRET=
-ZYTE_API_KEY=
-
-# --- Multilingual / Translation APIs ---
-# Bhashini API for 22 Indic languages (translation, TTS, STT)
-# Get API key from: https://bhashini.gov.in/
-BHASHINI_API_KEY=your_bhashini_api_key_here
-VITE_BHASHINI_API_KEY=your_bhashini_api_key_here
-BHASHINI_TTS_ENABLED=true
-BHASHINI_STT_ENABLED=true
-
-# Google Cloud Translation API (fallback for Bhashini)
-# Get from: https://console.cloud.google.com/apis/credentials
-VITE_GOOGLE_CLOUD_API_KEY=your_google_cloud_api_key_here
-
-# Google Cloud Translation & TTS (Alternative/Backup)
-GOOGLE_CLOUD_PROJECT_ID=
-GOOGLE_CLOUD_API_KEY=
-GOOGLE_CLOUD_TTS_API_KEY=
-GOOGLE_SPEECH_TO_TEXT_API_KEY=
-
-# Search Proxy Server (runs on port 3001 by default)
-SEARCH_PROXY_PORT=3001
-SEARCH_PROXY_HOST=0.0.0.0
-VITE_SEARCH_PROXY_URL=http://localhost:3001
-
-# --- Gaming Integrations ---
-CRAZY_GAMES_TOKEN=
-POKI_API_KEY=
-GAMEMONETIZE_API_KEY=
-ITCHIO_CLIENT_ID=
-RAWG_API_KEY=
-
-# --- Identity / Redix ---
-REDIX_IDENTITY_API_URL=https://localhost:8443
-REDIX_IDENTITY_API_KEY=
-
-# ============================================
-# AI / LLM Provider APIs
+# AI PROVIDERS (Required for AI features)
 # ============================================
 
-# --- OpenAI (Primary AI Provider) ---
-OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_BASE_URL=https://api.openai.com/v1
-OPENAI_MODEL=gpt-4o-mini
-OPENAI_API_BASE=https://api.openai.com/v1/chat/completions
+# OpenAI API (Optional - for GPT-4 Vision, advanced features)
+# Get from: https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# --- Anthropic (Claude) ---
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
-ANTHROPIC_BASE_URL=https://api.anthropic.com/v1
+# Anthropic Claude API (Optional - for Claude Sonnet)
+# Get from: https://console.anthropic.com/
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
 
-# --- Ollama (Local LLM Fallback) ---
+# Groq API (Optional - for fast inference)
+# Get from: https://console.groq.com/
+GROQ_API_KEY=gsk_your-groq-api-key-here
+
+# Hugging Face API (Optional - for model hosting)
+# Get from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=hf_your-huggingface-token-here
+
+# ============================================
+# OLLAMA (Local AI - Recommended)
+# ============================================
+
+# Ollama runs locally - no API key needed
+# Just install from: https://ollama.com/download
+# Then run: ollama pull phi3:mini && ollama pull llava:7b
+
+# Ollama Base URL (default: http://localhost:11434)
 OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_MODEL=llama3.2
-LLM_PROVIDER=openai
 
-# --- Hugging Face ---
-HUGGINGFACE_API_KEY=your_huggingface_api_key_here
-HUGGINGFACE_BASE_URL=https://router.huggingface.co/hf-inference
+# Ollama Origins (for CORS - auto-set by app, but can override)
+OLLAMA_ORIGINS=*
 
 # ============================================
-# Search & Research APIs
+# TRADING/BROKER APIs (Optional)
 # ============================================
 
-# --- DuckDuckGo (Default, no key needed) ---
-# DuckDuckGo is used by default, no API key required
+# Zerodha Kite API (For auto trade execution)
+# Get from: https://kite.trade/apps/
+ZERODHA_API_KEY=your-zerodha-api-key
+ZERODHA_API_SECRET=your-zerodha-api-secret
+ZERODHA_ACCESS_TOKEN=your-zerodha-access-token
 
-# --- Bing Search API ---
-BING_API_KEY=your_bing_api_key_here
-BING_SEARCH_ENDPOINT=https://api.bing.microsoft.com/v7.0/search
+# TradingView API (Optional - for advanced charting)
+TRADINGVIEW_API_KEY=your-tradingview-api-key
 
-# --- Brave Search API ---
-BRAVE_API_KEY=your_brave_api_key_here
-
-# --- Tavily Search API ---
-TAVILY_API_KEY=your_tavily_api_key_here
-
-# --- Firecrawl (Web Scraping) ---
-FIRECRAWL_API_KEY=your_firecrawl_api_key_here
-FIRECRAWL_BASE_URL=https://api.firecrawl.dev
-FIRECRAWL_WEBHOOK_SECRET=your_webhook_secret_here
-
-# --- Zyte (Web Scraping) ---
-ZYTE_API_KEY=your_zyte_api_key_here
-
-# Search Proxy Server
-SEARCH_PROXY_PORT=3001
-SEARCH_PROXY_HOST=0.0.0.0
-VITE_SEARCH_PROXY_URL=http://localhost:3001
+# Finnhub API (Optional - for real-time market data)
+FINNHUB_API_KEY=your-finnhub-api-key
 
 # ============================================
-# Redix Core (Green Intelligence Engine)
+# ANALYTICS & MONITORING (Optional)
 # ============================================
-REDIX_PORT=8001
-REDIX_HTTP_URL=http://localhost:4000/api/query
-REDIX_WS_URL=ws://localhost:4000/ws
-VITE_REDIX_CORE_URL=http://localhost:8001
-VITE_REDIX_HTTP_URL=http://localhost:4000/api/query
-VITE_REDIX_WS_URL=ws://localhost:4000/ws
+
+# Sentry (Error tracking)
+SENTRY_DSN=your-sentry-dsn-here
+
+# PostHog (Analytics)
+POSTHOG_API_KEY=your-posthog-api-key
+POSTHOG_HOST=https://app.posthog.com
 
 # ============================================
-# Knowledge Graph & Cloud Services
+# DEVELOPMENT
 # ============================================
-KNOWLEDGE_GRAPH_API_URL=https://api.example.com/knowledge
-KNOWLEDGE_GRAPH_API_KEY=your_knowledge_graph_key_here
+
+# Node Environment
+NODE_ENV=development
+
+# Vite Dev Server Port
+VITE_DEV_PORT=1420
+
+# Tauri Dev URL
+VITE_TAURI_DEV_URL=http://localhost:1420
 
 # ============================================
-# Cache & Queue Configuration
+# FEATURE FLAGS (Optional)
 # ============================================
-REDIS_URL=redis://localhost:6379/0
-AI_CACHE_ENABLED=true
-AI_CACHE_MAX_ENTRIES=1000
-AI_CACHE_TTL_SEARCH=1800
-AI_CACHE_TTL_CHAT=7200
-AI_CACHE_TTL_DEFAULT=3600
+
+# Enable experimental features
+VITE_ENABLE_EXPERIMENTAL=true
+
+# Enable telemetry (set to false to disable)
+VITE_ENABLE_TELEMETRY=true
+
+# Enable offline mode (default: true)
+VITE_OFFLINE_MODE=true
 
 # ============================================
-# Web Scraper Configuration
+# NOTES
 # ============================================
-SCRAPER_MAX_CONCURRENCY=4
-SCRAPER_CONCURRENCY=5
-SCRAPER_TIMEOUT_SECONDS=12
-SCRAPER_TIMEOUT_MS=10000
-SCRAPER_CACHE_TTL=1800
-SCRAPER_ROBOTS_TTL=3600
-SCRAPER_USER_AGENT=RegenBot/1.0 (+https://regen.ai/bot)
-SCRAPER_RENDER_ENDPOINT=
-SCRAPER_USE_RENDER_FALLBACK=true
+
+# 1. For OFFLINE MODE (recommended):
+#    - Install Ollama: https://ollama.com/download
+#    - Pull models: ollama pull phi3:mini && ollama pull llava:7b
+#    - No API keys needed! Everything works offline.
+
+# 2. For ONLINE MODE (advanced features):
+#    - Add OpenAI API key for GPT-4 Vision
+#    - Add Anthropic key for Claude Sonnet
+#    - Add Groq key for fast inference
+
+# 3. For TRADING:
+#    - Add Zerodha API keys for auto trade execution
+#    - Add Finnhub key for real-time market data
+
+# 4. All API keys are OPTIONAL except for specific features:
+#    - Offline AI: No keys needed (uses Ollama)
+#    - Online AI: OpenAI/Anthropic/Groq keys
+#    - Trading: Zerodha keys
+#    - Analytics: Sentry/PostHog keys
 
 # ============================================
-# Authentication & Security
+# SECURITY NOTES
 # ============================================
-JWT_SECRET=replace-with-strong-random-secret-min-32-chars
-ACCESS_TOKEN_EXPIRE_MINUTES=60
-REFRESH_TOKEN_EXPIRE_DAYS=30
 
-# ============================================
-# Telemetry & Monitoring
-# ============================================
-OTEL_ENABLED=false
-OTEL_EXPORTER_OTLP_ENDPOINT=https://otel.example.com/v1/traces
-TELEMETRY_ENABLED=false
-TELEMETRY_ENDPOINT=https://telemetry.regen.dev/api/v1/events
-
-# Sentry Error Tracking
-SENTRY_DSN=your_sentry_dsn_here
-SENTRY_TRACES_SAMPLE_RATE=0.0
-VITE_SENTRY_DSN=your_sentry_dsn_here
-VITE_SENTRY_TRACES_SAMPLE_RATE=0.0
-
-# Analytics
-ANALYTICS_ENABLED=false
-ANALYTICS_ENDPOINT=https://analytics.example.com/api/events
-ANALYTICS_SITE_ID=regen-app
-ANALYTICS_PUBLIC_KEY=your_analytics_public_key_here
-
-# ============================================
-# Eco Impact / Carbon Tracking
-# ============================================
-CARBON_API_TOKEN=your_carbon_api_token_here
-CARBON_REGION_CODE=US-NY
-
-# ============================================
-# n8n Workflow Integration
-# ============================================
-N8N_BASE_URL=http://localhost:5678
-N8N_WEBHOOK_URL=http://localhost:5678/webhook
-
-# ============================================
-# Skill Store & GitHub Integration
-# ============================================
-# GitHub API token for Skill Store (optional, for private repos or higher rate limits)
-# Get token from: https://github.com/settings/tokens
-GITHUB_API_TOKEN=
-GITHUB_SKILLS_REPO_OWNER=regenbrowser
-GITHUB_SKILLS_REPO_NAME=skills
-VITE_GITHUB_API_TOKEN=
-
-# ============================================
-# Bounty System APIs (Viral Demo Verification)
-# ============================================
-# YouTube Data API v3 - For verifying video views
-# Get API key from: https://console.cloud.google.com/apis/credentials
-YOUTUBE_API_KEY=
-YOUTUBE_API_CLIENT_ID=
-YOUTUBE_API_CLIENT_SECRET=
-
-# X (Twitter) API v2 - For verifying tweet views
-# Get credentials from: https://developer.twitter.com/en/portal/dashboard
-X_API_KEY=
-X_API_SECRET=
-X_BEARER_TOKEN=
-X_ACCESS_TOKEN=
-X_ACCESS_TOKEN_SECRET=
-
-# TikTok API (Limited availability)
-# TikTok doesn't have public API, use web scraping alternative
-TIKTOK_SCRAPER_API_KEY=
-
-# Instagram Graph API - For Reels verification
-# Get from: https://developers.facebook.com/docs/instagram-api
-INSTAGRAM_APP_ID=
-INSTAGRAM_APP_SECRET=
-INSTAGRAM_ACCESS_TOKEN=
-
-# ============================================
-# Payment Gateway APIs (UPI Bounty Payouts)
-# ============================================
-# Razorpay - UPI payment processing (India)
-# Get from: https://razorpay.com/docs/api/
-RAZORPAY_KEY_ID=
-RAZORPAY_KEY_SECRET=
-
-# PhonePe Payment Gateway (Alternative)
-PHONEPE_MERCHANT_ID=
-PHONEPE_SALT_KEY=
-PHONEPE_SALT_INDEX=
-
-# Paytm Payment Gateway (Alternative)
-PAYTM_MERCHANT_ID=
-PAYTM_MERCHANT_KEY=
-PAYTM_MERCHANT_KEY_SALT=
-
-# ============================================
-# Video Processing & AI Clips APIs
-# ============================================
-# OpenAI Whisper API - For video caption generation
-# Uses OPENAI_API_KEY (already defined above)
-
-# Google Cloud Video Intelligence API - For video processing
-GOOGLE_VIDEO_INTELLIGENCE_API_KEY=
-
-# Cloudinary - For video hosting and processing
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
-
-# AWS Transcribe - Alternative STT for video captions
-AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-
-# ============================================
-# Screen Recording & Capture
-# ============================================
-# Mux - For cloud-based screen recording (if needed)
-MUX_TOKEN_ID=
-MUX_TOKEN_SECRET=
-MUX_ENVIRONMENT_KEY=
-
-# ============================================
-# Additional Redix Configuration
-# ============================================
-# Disable Redix if needed (set to 'true')
-VITE_DISABLE_REDIX=false
-DISABLE_REDIX=false
-
-# Redix SSE endpoint (for streaming)
-VITE_REDIX_SSE_URL=http://localhost:4000/api/ask
-
-# ============================================
-# OCR & Document Processing (For Resume Fixer & Form Filler)
-# ============================================
-# Tesseract.js works offline, but cloud APIs available:
-# Google Cloud Vision API
-GOOGLE_VISION_API_KEY=
-
-# AWS Textract
-AWS_TEXTRACT_REGION=us-east-1
-# Uses AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY above
-
-# Microsoft Azure Computer Vision
-AZURE_COMPUTER_VISION_ENDPOINT=
-AZURE_COMPUTER_VISION_KEY=
-
-# ============================================
-# Notes
-# ============================================
-# - Variables prefixed with `VITE_` are exposed to the frontend
-# - Never commit actual API keys to version control
-# - Use environment-specific files: `.env.development`, `.env.production`
-# - For production, use secure secret management (AWS Secrets Manager, etc.)
-# - Most APIs have free tiers - check provider documentation for limits
-#
-# ============================================
-# Quick Reference: Required vs Optional APIs
-# ============================================
-# REQUIRED for core functionality:
-# - OPENAI_API_KEY (or ANTHROPIC_API_KEY) - For AI features
-# - VITE_REDIX_CORE_URL - Backend server URL
-#
-# REQUIRED for specific features:
-# - FINNHUB_TOKEN/FINNHUB_API_KEY - For Trade Mode live data
-# - BHASHINI_API_KEY - For multilingual translation (22 Indic languages)
-# - GITHUB_API_TOKEN - For Skill Store (optional, works without but rate-limited)
-#
-# OPTIONAL but recommended:
-# - YOUTUBE_API_KEY - For bounty video verification
-# - X_BEARER_TOKEN - For X/Twitter view verification
-# - RAZORPAY_KEY_ID/SECRET - For UPI bounty payouts
-# - GOOGLE_CLOUD_API_KEY - For TTS/translation backup
-#
-# OPTIONAL for advanced features:
-# - YOUTUBE_API_KEY, X_API_KEY - For bounty verification
-# - RAZORPAY/PHONEPE/PAYTM - For payment processing
-# - AWS/GOOGLE_CLOUD keys - For video processing, OCR, TTS
-# - CLOUDINARY - For video hosting
+# - Never commit .env file to git (it's in .gitignore)
+# - Keep API keys secret
+# - Rotate keys regularly
+# - Use environment-specific keys (dev/staging/prod)
