docs: Add API keys guide and update .gitignore
- Created comprehensive API_KEYS.md showing new vs existing APIs
- Updated .gitignore to track example.env
- Documented all new APIs: Ollama, Vision, Grammar, Trade Signals, Zerodha
- Added security notes and recommended setups

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ storybook-static/
 .env
 .env.local
 .env.*.local
+# Keep example.env for reference
+!.env.example
+!example.env
 
 # IDE
 .vscode/
