feat: Complete 7-day plan implementation (Days 1-6)
 DAY 1: CORS/Launch Fixes
- Comprehensive OLLAMA_ORIGINS (tauri://, localhost, 127.0.0.1)
- Vhosts support (0.0.0.0:11434)
- Windows private network support
- Silent Ollama install (Linux/macOS)

 DAY 2: Bundle + Perf
- Memory checks before regen_session
- Enhanced unload_idle_browsers
- Platform-specific process cleanup
- beforeBuildCommand for model pulling

 DAY 3: Security Polish
- Security prompt for localhost access
- One-time permission notification
- localStorage tracking

 DAY 4: UX Boost
- Command Palette (Cmd+K / Ctrl+K) - SigmaOS/Arc-style
- Quick mode switching
- WISPR activation from palette
- Grammar optimization (>15 chars, 1.5s delay)

 DAY 5: Hotkeys/Grammar
- Grammar throttling (reduces API calls)
- Optimized correction timing

 DAY 6: Prod Builds
- GitHub Actions updated with Ollama install
- Multi-platform builds ready
- beforeBuildCommand configured

All fixes from comprehensive feedback implemented!
Ready for v1.3.0 release

--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
 thiserror = "1"
 reqwest = { version = "0.12", features = ["json"] }
 tauri-plugin-global-shortcut = "2.0"
+# sysinfo = "0.31"  # Commented out - using platform commands for now (can add later for advanced monitoring)
 # playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
 # base64 = "0.22"  # Not needed without Playwright screenshots
 
