feat: Complete Category A, B, and C production fixes
Category A (Critical):
- Fixed SSE /api/ask to use redisSub.duplicate() instead of new Redis()
- Added connection limits (20 SSE, 50 WS per IP)
- Improved Redis error handling with exponential backoff
- Fixed Finnhub fan-out pattern (reuse upstream connections)
- Converted /api/summarize to non-blocking 202 pattern
- WebSocket ping/pong and safeWsSend already implemented

Category B (High Priority):
- Added rate limiting (10 req/min) for expensive endpoints
- Added LLM streaming backpressure (50 tokens/sec, 200 char bursts)
- Added Prometheus metrics endpoint (/metrics/prom)
- Added authentication & API key support with quotas

Category C (Medium Priority):
- Tab state already centralized (Zustand)
- Converted summarize to SSE subscription pattern
- Hidden unfinished Trade mode (coming soon)
- Added GitHub Actions CI/CD workflow
- Added Docker Compose for local dev
- Added k6 load testing scripts

Fixes:
- Fixed duplicate isTauri declaration in Research Panel
- Fixed all lint warnings
- Fixed TypeScript compilation errors

--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "storybook": "npx storybook dev -p 6006",
     "storybook:build": "npx storybook build",
     "test:e2e": "playwright test --config=playwright.config.ts",
+    "test:load": "k6 run load-test/k6-summarize.js",
+    "test:load:sse": "k6 run load-test/k6-sse.js",
     "test:multilingual-offline": "playwright test tests/e2e/multilingual-offline.spec.ts --config=playwright.config.ts",
     "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
     "test:visual": "playwright test --config=playwright.visual.config.ts",
@@ -65,6 +67,7 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.2.0",
     "@langchain/anthropic": "^1.0.1",
     "@langchain/core": "^1.0.5",
