--- a/example.env
+++ b/example.env
@@ -45,8 +45,13 @@ ZERODHA_API_KEY=your-zerodha-api-key
 ZERODHA_API_SECRET=your-zerodha-api-secret
 ZERODHA_ACCESS_TOKEN=your-zerodha-access-token
 
-# TradingView API (Optional - for advanced charting)
-TRADINGVIEW_API_KEY=your-tradingview-api-key
+# TradingView Broker REST API (Optional - for trading integration)
+# Get from: https://www.tradingview.com/rest-api-docs/
+TRADINGVIEW_API_BASE_URL=https://your-rest-implementation.com/api
+TRADINGVIEW_ACCESS_TOKEN=your-tradingview-access-token
+TRADINGVIEW_ACCOUNT_ID=your-account-id
+TRADINGVIEW_CLIENT_ID=your-client-id
+TRADINGVIEW_CLIENT_SECRET=your-client-secret
 
 # Finnhub API (Optional - for real-time market data)
 FINNHUB_API_KEY=your-finnhub-api-key
@@ -74,6 +79,17 @@ VITE_DEV_PORT=1420
 
 # Tauri Dev URL
 VITE_TAURI_DEV_URL=http://localhost:1420
+
+# Backend API Configuration
+# API Base URL (for frontend to connect to backend server)
+VITE_API_BASE_URL=http://127.0.0.1:4000
+VITE_APP_API_URL=http://127.0.0.1:4000
+
+# Backend Server Port (for server to listen on)
+REDIX_PORT=4000
+
+# Redis Configuration
+REDIS_URL=redis://127.0.0.1:6379
 
 # ============================================
 # FEATURE FLAGS (Optional)
