--- a/tsconfig.renderer.json
+++ b/tsconfig.renderer.json
@@ -4,7 +4,7 @@
     "composite": true,
     "outDir": "./dist/renderer",
     "rootDir": "./src",
-    "types": ["vite/client", "node"],
+    "types": ["node"],
     "moduleResolution": "bundler"
   },
   "include": ["src", "src/**/*.json"]
