--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,13 @@
   "description": "Regen Fastify backend server",
   "dependencies": {
     "@fastify/cors": "^10.0.1",
+    "@fastify/rate-limit": "^10.1.1",
     "@fastify/websocket": "^11.2.0",
     "axios": "^1.7.7",
     "express": "^4.19.2",
     "fastify": "^5.6.2",
     "ioredis": "^5.8.2",
     "uuid": "^13.0.0",
-    "ws": "^8.18.0",
-    "yfinance": "^1.1.1"
+    "ws": "^8.18.0"
   }
 }
