--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ urlencoding = "2.1"
 tauri-plugin-global-shortcut = "2.0"
 sysinfo = "0.31"  # For process management and memory monitoring
 dotenv = "0.15"  # For loading .env file
+chrono = "0.4"  # For date handling
 # playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
 # base64 = "0.22"  # Not needed without Playwright screenshots
 
