--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "files": [],
   "references": [
-    { "path": "./tsconfig.renderer.json" },
-    { "path": "./tsconfig.electron.json" }
+    { "path": "./tsconfig.renderer.json" }
   ]
 }
 
