Fix TypeScript compilation errors and linting warnings
- Created src/vite-env.d.ts with ImportMeta.env type definitions
- Fixed ChromeNewTabPage.tsx: getQuote return type, ipc calls, tabs.activate
- Fixed commandHandler.ts: orderType type filtering (buy/sell only)
- Fixed SessionWorkspace.ts: Made Tauri API imports optional with dynamic loading
- Fixed AIDeveloperConsole.tsx: Window.console and Window.eval type assertions
- Fixed HeroPanel.tsx: Logo import handling
- Removed all unused imports and variables (71 linting warnings fixed)
- Updated tsconfig.renderer.json to include vite-env.d.ts
- Fixed OmniModeSwitcher and SplitView: Restored required variables

--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -25,6 +25,8 @@ tauri-plugin-global-shortcut = "2.0"
 sysinfo = "0.31"  # For process management and memory monitoring
 dotenv = "0.15"  # For loading .env file
 chrono = "0.4"  # For date handling
+rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for local storage
+uuid = { version = "1.0", features = ["v4", "serde"] }  # For generating IDs
 # playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
 # base64 = "0.22"  # Not needed without Playwright screenshots
 
