--- a/tsconfig.renderer.json
+++ b/tsconfig.renderer.json
@@ -7,6 +7,5 @@
     "types": ["node"],
     "moduleResolution": "bundler"
   },
-  "include": ["src", "src/**/*.json"]
+  "include": ["src", "src/**/*.json", "src/vite-env.d.ts"]
 }
-
