--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev:all": "node scripts/start-dev-all.cjs",
     "dev:web": "npx cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
+    "dev:mock": "cross-env DEV=true concurrently \"node server/mock-llm.js\" \"cd tauri-migration && npm run tauri dev\"",
     "build": "npx cross-env JSDOM_NO_CANVAS=1 vite build",
     "build:types": "npx tsc -b",
     "build:app": "cd tauri-migration && npm run tauri build",
