--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -27,6 +27,9 @@ dotenv = "0.15"  # For loading .env file
 chrono = "0.4"  # For date handling
 rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for local storage
 uuid = { version = "1.0", features = ["v4", "serde"] }  # For generating IDs
+md5 = "0.7"  # For HTML hashing
+tokio-tungstenite = { version = "0.24", features = ["native-tls"] }  # WebSocket server
+futures = "0.3"  # For async streams
 # playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
 # base64 = "0.22"  # Not needed without Playwright screenshots
 
