feat: Complete real-time streaming agent with WebSocket and mock LLM integration
- Implemented WebSocket server in Tauri (port 18080) for real-time agent streaming
- Created StreamingAgentSidebar component with WebSocket client and auto-reconnect
- Added progressive chunking for large documents (>4KB) with sentence-based splitting
- Integrated SQLite caching with instant cache hits for previously analyzed URLs
- Added rate limiting (one active stream per session) with agent_busy event
- Fixed mock LLM server (port 4000) with Ollama-like JSON streaming format
- Automatic fallback: Ollama (primary)  Mock LLM (fallback)
- Real-time token streaming every 5 tokens for sub-second latency
- Added action confirmation modal before execution
- Updated dev scripts: dev:realtime, dev:mock-llm, dev:tauri
- All TypeScript and Rust compilation errors fixed
- Complete integration documentation in REALTIME_STREAMING_INTEGRATION.md

--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "dev:web": "npx cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
     "dev:mock": "cross-env DEV=true concurrently \"node server/mock-llm.js\" \"cd tauri-migration && npm run tauri dev\"",
+    "dev:realtime": "cross-env DEV=true concurrently \"npm:dev:mock-llm\" \"npm:dev:tauri\"",
+    "dev:mock-llm": "node server/mock-llm.js",
+    "dev:tauri": "cd tauri-migration && npm run tauri dev",
+    "dev:realtime": "concurrently \"npm:dev:mock-llm\" \"npm:dev:tauri\"",
     "build": "npx cross-env JSDOM_NO_CANVAS=1 vite build",
     "build:types": "npx tsc -b",
     "build:app": "cd tauri-migration && npm run tauri build",
