--- a/tauri-migration/src-tauri/Cargo.toml
+++ b/tauri-migration/src-tauri/Cargo.toml
@@ -24,13 +24,14 @@ urlencoding = "2.1"
 tauri-plugin-global-shortcut = "2.0"
 sysinfo = "0.31"  # For process management and memory monitoring
 dotenv = "0.15"  # For loading .env file
-chrono = "0.4"  # For date handling
+chrono = { version = "0.4", features = ["serde"] }  # For date handling and timestamps
 rusqlite = { version = "0.31", features = ["bundled"] }  # SQLite for local storage
 uuid = { version = "1.0", features = ["v4", "serde"] }  # For generating IDs
 md5 = "0.7"  # For HTML hashing
 tokio-tungstenite = { version = "0.24", features = ["native-tls"] }  # WebSocket server
 futures = "0.3"  # For async streams
 lazy_static = "1.4"  # For static initialization
+regex = "1.10"  # For HTML cleaning in extract.rs
 # playwright = { version = "0.20", features = ["api"] }  # Commented out - requires Node.js runtime
 # base64 = "0.22"  # Not needed without Playwright screenshots
 
