feat: Add Hugging Face Inference API integration as LLM provider
- Added Hugging Face API support in agent.rs with streaming support
- LLM provider selection via LLM_PROVIDER env var (ollama/huggingface)
- Hugging Face returns non-streaming JSON, Ollama uses streaming
- Added HUGGINGFACE_API_KEY and HUGGINGFACE_MODEL env vars
- Updated example.env with Hugging Face configuration
- Updated README.md with Hugging Face integration docs
- Falls back to Ollama if Hugging Face API key not set
- Supports popular models: Llama-2, Mistral, Flan-T5, etc.

Usage:
  Set LLM_PROVIDER=huggingface in .env
  Add HUGGINGFACE_API_KEY=your_token
  Optionally set HUGGINGFACE_MODEL (default: meta-llama/Llama-2-7b-chat-hf)

--- a/example.env
+++ b/example.env
@@ -21,6 +21,15 @@ GROQ_API_KEY=gsk_your-groq-api-key-here
 # Get from: https://huggingface.co/settings/tokens
 HUGGINGFACE_API_KEY=hf_your-huggingface-token-here
 
+# Hugging Face Model (Optional - default: meta-llama/Llama-2-7b-chat-hf)
+# Popular models: meta-llama/Llama-2-7b-chat-hf, mistralai/Mistral-7B-Instruct-v0.1, google/flan-t5-large
+HUGGINGFACE_MODEL=meta-llama/Llama-2-7b-chat-hf
+
+# LLM Provider (Optional - default: ollama)
+# Options: ollama, huggingface, hf
+# Set to "huggingface" or "hf" to use Hugging Face Inference API
+LLM_PROVIDER=ollama
+
 # ============================================
 # OLLAMA (Local AI - Recommended)
 # ============================================
