docs: Add missing environment variables to example.env
Added missing env vars:
- OLLAMA_MODEL, OLLAMA_HOST, OLLAMA_ORIGIN, OLLAMA_ALLOW_PRIVATE_NETWORK
- LLM_PROVIDER, AI_PROVIDER, OPENAI_MODEL, ANTHROPIC_MODEL
- OPENAI_BASE_URL, ANTHROPIC_BASE_URL, MISTRAL_API_KEY
- REGEN_SERVER_URL, OPENWEATHER_API_KEY
- VITE_REDIX_* URLs (CORE, WS, HTTP, SSE)
- VITE_DISABLE_REDIX
- VITE_OPENAI_API_KEY, VITE_ANTHROPIC_API_KEY, VITE_MISTRAL_API_KEY
- VITE_OLLAMA_BASE_URL, VITE_OPENAI_BASE_URL
- VITE_BING_API_KEY, VITE_BHASHINI_API_KEY, VITE_SEARCH_PROXY_URL
- VITE_TRADE_API_BASE, VITE_TRADE_API_KEY
- VITE_N8N_BASE_URL, VITE_N8N_WEBHOOK_URL, VITE_N8N_API_KEY
- VITE_MEILI_URL, VITE_MEILI_MASTER_KEY
- VITE_METRICS_INTERVAL_MS
- MOCK_LLM_PORT

Also added comprehensive configuration notes section.

--- a/example.env
+++ b/example.env
@@ -26,9 +26,29 @@ HUGGINGFACE_API_KEY=hf_your-huggingface-token-here
 HUGGINGFACE_MODEL=meta-llama/Llama-2-7b-chat-hf
 
 # LLM Provider (Optional - default: ollama)
-# Options: ollama, huggingface, hf
+# Options: ollama, huggingface, hf, openai, anthropic
 # Set to "huggingface" or "hf" to use Hugging Face Inference API
 LLM_PROVIDER=ollama
+
+# AI Provider (for server-side - default: openai)
+# Options: openai, anthropic, ollama
+AI_PROVIDER=openai
+
+# OpenAI Model (default: gpt-4o)
+OPENAI_MODEL=gpt-4o
+
+# OpenAI Base URL (default: https://api.openai.com/v1)
+OPENAI_BASE_URL=https://api.openai.com/v1
+
+# Anthropic Model (default: claude-3-5-sonnet-20241022)
+ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+
+# Anthropic Base URL (default: https://api.anthropic.com/v1)
+ANTHROPIC_BASE_URL=https://api.anthropic.com/v1
+
+# Mistral API (Optional)
+# Get from: https://console.mistral.ai/
+MISTRAL_API_KEY=your-mistral-api-key-here
 
 # ============================================
 # OLLAMA (Local AI - Recommended)
@@ -41,8 +61,20 @@ LLM_PROVIDER=ollama
 # Ollama Base URL (default: http://localhost:11434)
 OLLAMA_BASE_URL=http://localhost:11434
 
+# Ollama Model (default: llama3.2:3b)
+OLLAMA_MODEL=llama3.2:3b
+
 # Ollama Origins (for CORS - auto-set by app, but can override)
 OLLAMA_ORIGINS=*
+
+# Ollama Host (auto-set by app, but can override)
+OLLAMA_HOST=127.0.0.1:11434
+
+# Ollama Origin (auto-set by app, but can override)
+OLLAMA_ORIGIN=*
+
+# Ollama Allow Private Network (auto-set by app)
+OLLAMA_ALLOW_PRIVATE_NETWORK=true
 
 # ============================================
 # TRADING/BROKER APIs (Optional)
@@ -64,6 +96,10 @@ TRADINGVIEW_CLIENT_SECRET=your-client-secret
 
 # Finnhub API (Optional - for real-time market data)
 FINNHUB_API_KEY=your-finnhub-api-key
+
+# OpenWeatherMap API (Optional - for weather data)
+# Get from: https://openweathermap.org/api
+OPENWEATHER_API_KEY=your-openweather-api-key
 
 # ============================================
 # ANALYTICS & MONITORING (Optional)
@@ -94,11 +130,54 @@ VITE_TAURI_DEV_URL=http://localhost:1420
 VITE_API_BASE_URL=http://127.0.0.1:4000
 VITE_APP_API_URL=http://127.0.0.1:4000
 
+# Frontend API Keys (for client-side access)
+VITE_OPENAI_API_KEY=sk-your-openai-api-key-here
+VITE_ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key-here
+VITE_MISTRAL_API_KEY=your-mistral-api-key-here
+VITE_OLLAMA_BASE_URL=http://localhost:11434
+VITE_OPENAI_BASE_URL=https://api.openai.com/v1
+
+# Search & Research APIs
+VITE_BING_API_KEY=your-bing-api-key-here
+VITE_BHASHINI_API_KEY=your-bhashini-api-key-here
+VITE_SEARCH_PROXY_URL=http://127.0.0.1:4000/api/search/proxy
+
+# Trade API Configuration
+VITE_TRADE_API_BASE=http://127.0.0.1:4000/api/trade
+VITE_TRADE_API_KEY=your-trade-api-key-here
+
+# n8n Workflow Automation
+VITE_N8N_BASE_URL=http://localhost:5678
+VITE_N8N_WEBHOOK_URL=http://localhost:5678/webhook
+VITE_N8N_API_KEY=your-n8n-api-key-here
+
+# MeiliSearch Configuration
+VITE_MEILI_URL=http://localhost:7700
+VITE_MEILI_MASTER_KEY=regen2026
+
+# Metrics & Monitoring
+VITE_METRICS_INTERVAL_MS=5000
+
+# Mock LLM Server (Development)
+MOCK_LLM_PORT=4000
+
 # Backend Server Port (for server to listen on)
 REDIX_PORT=4000
 
+# Regen Server URL (for agent communication)
+REGEN_SERVER_URL=http://127.0.0.1:4000
+
 # Redis Configuration
 REDIS_URL=redis://127.0.0.1:6379
+
+# Redix Core URLs (for frontend)
+VITE_REDIX_CORE_URL=http://localhost:8001
+VITE_REDIX_WS_URL=ws://localhost:8001
+VITE_REDIX_HTTP_URL=http://localhost:8001
+VITE_REDIX_SSE_URL=http://localhost:8001/sse
+
+# Disable Redix (set to true to disable)
+VITE_DISABLE_REDIX=false
 
 # ============================================
 # FEATURE FLAGS (Optional)
