docs: Add remaining missing environment variables to example.env
Added:
- REGEN_SERVER_URL (for agent communication)
- VITE_REDIX_* URLs (CORE, WS, HTTP, SSE)
- VITE_DISABLE_REDIX
- MOCK_LLM_PORT
- Additional configuration notes section with usage guidelines

--- a/example.env
+++ b/example.env
@@ -224,3 +224,28 @@ VITE_OFFLINE_MODE=true
 # - Keep API keys secret
 # - Rotate keys regularly
 # - Use environment-specific keys (dev/staging/prod)
+
+# ============================================
+# ADDITIONAL CONFIGURATION NOTES
+# ============================================
+
+# VITE_* variables are exposed to the frontend (browser)
+# Variables without VITE_ prefix are backend-only (Tauri/Node.js)
+
+# For offline mode, you only need:
+# - OLLAMA_BASE_URL (default: http://localhost:11434)
+# - OLLAMA_MODEL (default: llama3.2:3b)
+# - No API keys required!
+
+# For online mode with cloud LLMs:
+# - Set LLM_PROVIDER=huggingface or AI_PROVIDER=openai/anthropic
+# - Add corresponding API keys (HUGGINGFACE_API_KEY, OPENAI_API_KEY, etc.)
+
+# For n8n workflow automation:
+# - Install n8n: npm install -g n8n
+# - Set VITE_N8N_BASE_URL and VITE_N8N_API_KEY
+# - n8n auto-starts from bundled binary if available
+
+# For MeiliSearch indexing:
+# - MeiliSearch auto-starts from bundled binary
+# - Set VITE_MEILI_URL and VITE_MEILI_MASTER_KEY if using custom instance
