feat: Day 1-2 - Add Sentry crash reporting and error handlers
Implemented comprehensive crash reporting and error handling:

Frontend (React):
- Added @sentry/react integration
- Enhanced sentry-client.ts to support Tauri/web
- Added Sentry to ErrorBoundary component
- Enhanced unhandled rejection handler with Sentry
- Enhanced uncaught error handler with Sentry
- Early Sentry initialization in main.tsx

Backend (Tauri/Rust):
- Added sentry crate to Cargo.toml
- Initialized Sentry in main.rs with panic handler
- Panic handler captures crashes and sends to Sentry
- Environment-based configuration (SENTRY_DSN)

Configuration:
- Updated example.env with Sentry DSN variables
- Added VITE_SENTRY_DSN and VITE_SENTRY_TRACES_SAMPLE_RATE

Error Handling:
- Global error boundary with Sentry integration
- Unhandled promise rejection capture
- Uncaught error capture
- Panic handler for Rust crashes

All errors are now captured and sent to Sentry for monitoring.

Note: Pre-existing TypeScript errors in Tauri imports (not related to this change)

--- a/example.env
+++ b/example.env
@@ -106,7 +106,10 @@ OPENWEATHER_API_KEY=your-openweather-api-key
 # ============================================
 
 # Sentry (Error tracking)
+# Get from: https://sentry.io/settings/your-org/projects/your-project/keys/
 SENTRY_DSN=your-sentry-dsn-here
+VITE_SENTRY_DSN=your-sentry-dsn-here
+VITE_SENTRY_TRACES_SAMPLE_RATE=0.1
 
 # PostHog (Analytics)
 POSTHOG_API_KEY=your-posthog-api-key
