--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "dev:web": "npx cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
     "dev:mock": "cross-env DEV=true concurrently \"node server/mock-llm.js\" \"cd tauri-migration && npm run tauri dev\"",
-    "dev:realtime": "cross-env DEV=true concurrently \"npm:dev:mock-llm\" \"npm:dev:tauri\"",
+    "dev:realtime": "concurrently \"npm:dev:mock-llm\" \"npm:dev:tauri\"",
     "dev:mock-llm": "node server/mock-llm.js",
     "dev:tauri": "cd tauri-migration && npm run tauri dev",
-    "dev:realtime": "concurrently \"npm:dev:mock-llm\" \"npm:dev:tauri\"",
     "build": "npx cross-env JSDOM_NO_CANVAS=1 vite build",
     "build:types": "npx tsc -b",
     "build:app": "cd tauri-migration && npm run tauri build",
@@ -72,6 +71,7 @@
     "@langchain/openai": "^1.1.1",
     "@mozilla/readability": "^0.6.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@sentry/react": "^10.27.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/dompurify": "^3.0.5",
     "abort-controller": "^3.0.0",
